# roschat

./: .#getarray.sh  .gitignore  cleanclient.sh  cleanmaster.sh  connectserver.sh  distributetask.sh  ezmake.sh  patch.sh  removezombies.sh  smartlaunch.sh  startclient.sh  startmaster.sh  template.launch  testssh.sh  writelaunch.sh
src/roschat/: CMakeLists.txt  chat.launch
src/roschat/src/: roslistener.cpp  roslistener.h  rostalker.cpp  rostalker.h
src/roslistener/: CMakeLists.txt  listeners.launch  package.xml  roslistener
src/roslistener/src/: roslistener.cpp
src/rostalker/: CMakeLists.txt  chat.launch  package.xml  rostalker
src/rostalker/src/: rostalker.h
