<?xml version="1.0"?>
<package>
  <name>roschat</name>
  <version>0.0.0</version>
  <description>The ros_gtest package</description>
  <maintainer email="ysong@gmail.com">ysong</maintainer>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
