<?xml version="1.0"?>
<package>
  <name>roslistener</name>
  <version>0.1.0</version>
  <description>The roslistener package</description>
  <maintainer email="ysong@gmail.com">ysong</maintainer>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
